# toddlerbot

./: .gitignore  .gitmodules  README.md  mypy.ini  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pytest_ci.yml
docs/: Makefile  conf.py  display_item.py  index.rst
docs/_static/: bom.csv  positions.csv
docs/api/: modules.rst  toddlerbot.actuation.rst  toddlerbot.algorithms.rst  toddlerbot.descriptions.rst  toddlerbot.locomotion.rst  toddlerbot.manipulation.datasets.rst  toddlerbot.manipulation.models.rst  toddlerbot.manipulation.rst  toddlerbot.manipulation.utils.rst  toddlerbot.policies.rst  toddlerbot.reference.rst  toddlerbot.rst  toddlerbot.sensing.rst  toddlerbot.sim.rst  toddlerbot.tools.rst  toddlerbot.utils.rst  toddlerbot.visualization.rst
docs/features/: 01_safety_stand.rst  02_teleoperation_arms.rst  03_diy_battery.rst
docs/hardware/: 01_bill_of_materials.rst  02_pcb.rst  03_3d_printing.rst  04_assembly_manual.rst
docs/sections/: 01_hardware.rst  02_software.rst  03_additional_features.rst  04_useful_tools.rst  05_tips_and_tricks.rst  06_api.rst
docs/software/: 01_setup.rst  02_jetson_orin.rst  03_rog_ally_x.rst  04_steam_deck.rst
docs/tools/: 01_zero_point_calibration.rst  02_sysID.rst  (+2 more)
examples/: test_apriltag.py  test_camera.py  test_control_freq.py  test_dynamixel.py  test_imu.py  test_jax_torch.py  test_joystick.py  test_mic.py  test_openai_chat.py  test_ref_motion.py  test_speaker.py
motion/: arm_pose_dataset.lz4  cuddle.pkl  hold.pkl  kneel.pkl  pull_up_grasp.pkl  pull_up_pull.pkl  push_up.pkl
scripts/: onshape_to_robot.sh  run_dp_exp_seq.sh  run_rl_exp_seq.sh  select_ckpt.sh
tests/: test_run_policy.py
(+563 files in other folders)
